--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/CodyDiab/pen-name/issues"
   },
-  "homepage": "https://github.com/CodyDiab/pen-name#readme"
+  "homepage": "https://github.com/CodyDiab/pen-name#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.0"
+  }
 }
