--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mattkohl82/deep-thoughts.git"
+    "url": "git+https://github.com/CodyDiab/pen-name.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mattkohl82/deep-thoughts/issues"
+    "url": "https://github.com/CodyDiab/pen-name/issues"
   },
-  "homepage": "https://github.com/mattkohl82/deep-thoughts#readme",
+  "homepage": "https://github.com/CodyDiab/pen-name#readme",
   "dependencies": {
     "if-env": "^1.0.4"
   },
