--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/CodyDiab/pen-name#readme",
   "dependencies": {
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "stripe": "^8.89.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0"
