--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001",
+  "engines": {
+    "node": "12.16.3"
+  },
   "dependencies": {
     "use-dark-mode": "latest",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
