--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
+  "engines": {
+    "node": "12.16.3"
+  },
   "scripts": {
     "heroku-postbuild": "cd client && npm run build",
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
