--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   },
   "homepage": "https://github.com/CodyDiab/pen-name#readme",
   "dependencies": {
-    "if-env": "^1.0.4",
-    "stripe": "^8.89.0"
+    "if-env": "^1.0.4"
+   
   },
   "devDependencies": {
     "concurrently": "^5.2.0"
